# Projet_Amazoff

./: .gitignore  Makefile  README.md  app.js  package-lock.json  package.json
backend/: .env.template  .gitignore  Dockerfile  README.txt  app.js  functions.js  package-lock.json  package.json  requirements.txt
backend/articles_python/: Dockerfile
backend/articles_python/src/: articles_routes.py
backend/articles_python/tools/: db_health.py  mysql.py
backend/authentification/: app.ts
backend/authentification/src/: db.ts  tokenModel.ts
backend/avis_python/tools/: db_health.py
backend/commandes_python/: app.py
backend/commandes_python/src/: commandes_livrees_routes.py
backend/magasin_cpp/: .gitignore
backend/magasin_cpp/magasin_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README_magsin.md  docker-compose.yml
backend/magasin_cpp/magasin_cpp/src/: main.cpp
backend/micro-services/articles/: appArticle.js
backend/micro-services/users/: appUser.js
backend/notifications_node/: README.md
backend/notifications_node/src/: notificationController.js  notificationRoutes.js  notificationService.js
backend/panier_python/: Dockerfile  README.md
backend/panier_python/src/: panier_routes.py
backend/panier_python/tools/: db_health.py
backend/payment_mode_node/: appPaymentMode.js  install.sh
backend/payment_mode_node/src/: paymentModeController.js  paymentModeMiddleware.js  paymentModeModel.js  paymentModeRoutes.js  paymentModeService.js
backend/roles/src/: roleModel.ts  roleRoutes.ts
backend/src/middleware/: authMiddleware.js
backend/src/modules/: __init__.py  main.py
backend/src/modules/magasin_cpp/magasin_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README_magsin.md  docker-compose.yml
backend/src/modules/magasin_cpp/magasin_cpp/Crow/: CrowConfig.cmake  cmake_uninstall.cmake
backend/src/modules/magasin_cpp/magasin_cpp/src/: main.cpp
backend/src/modules/magasin_cpp/magasin_cpp/src/controllers/: magasinController.cpp  magasinController.h
backend/src/modules/magasin_cpp/magasin_cpp/src/db/: db.cpp  db.h
backend/src/modules/magasin_cpp/magasin_cpp/src/middlewares/: cors_middleware.h
backend/src/modules/magasin_cpp/magasin_cpp/src/models/: magasinModel.cpp  magasinModel.h
backend/users/: README.md
backend/users/src/: userOutils.ts
controllers/: userController.js
environnements/: .env.example  docker-compose.yml
environnements/conf.d/: default.txt  default_1.txt  default_2.conf
environnements/mariadb-init/: init.sql
environnements/mongo-init/: init.js
frontend/: Dockerfile  README.md  angular.json  idées_florian  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
middleware/: authMiddleware.js
models/: userModel.js
modules/users/: tokenModel.js  userController.js  userModel.js  userRoutes.js
routes/: userRoutes.js
src/modules/articles/: articleController.js  articleModel.js  articleRoutes.js
src/modules/users/: userController.js  userModel.js  userRoutes.js
(+244 files in other folders)
